# FarmOfVerde

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pgzrun.py  pyproject.toml  requirements_dev.txt  tox.ini  verde_main.py
.github/: ISSUE_TEMPLATE.md
data/ai_models/: behavior_model.pt
data/config/: dialogue_data.yaml  game_config.yaml
data/config/shops/: general_store.yaml
data/items/: crops.json  foods.json  seeds.json  tools.json
data/maps/: farm.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/verdes/: __init__.py  cli.py  game.py
src/verdes/ai/: behavior_model.py  dialogue_system.py
src/verdes/engine/: camera.py
src/verdes/entities/: actor.py  npc.py  player.py
src/verdes/systems/: economy.py  inventory.py  time.py
src/verdes/ui/: ui_manager.py
src/verdes/world/: map.py
tests/: __init__.py  test_verdes.py
tools/: world_editor.py
